@@ -1,3 +1,6 @@
+2009-11-27
+	Implemented TTY widget
+	
 2009-11-06
 	final fix for matrix inverse bug
 	
